# chipflow-template

./: .env.toolchain  CLAUDE.md  README.md  chipflow.toml  pyproject.toml
.devcontainer/: Dockerfile  Makefile  command-server-proxy.js  devcontainer.json  first-run-notice.txt  install-deps.sh  post-create.sh  pyproject.toml  update-content.sh
.devcontainer/cache-warming/: chipflow.toml  design.py
.devcontainer/extensions/: chipflow-workbench-0.1.0.vsix  chipflow-workbench-0.1.1.vsix  chipflow-workbench-latest.vsix
.github/workflows/: codespaces-prebuilds.yml  pr-comment-test-link.yml
