
# Project metadata

[project]
name = "design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
]
license = "LicenseRef-Proprietary"

requires-python = ">=3.12"
dependencies = [
    "amaranth[builtin-yosys]>=0.5.4,<0.6",
    "chipflow-digital-ip @ git+https://github.com/ChipFlow/chipflow-digital-ip",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "ziglang==0.11.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.resolution]
allow-prereleases = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
    "pyright>=1.1.405",
]
